tests/negative/DuplicateArgument.juvix
module DuplicateArgument;

type T := t : T;

f (a : T) : T := t;

x : T := f (a := t; a := t);
